# lidar_S2D

./: .gitignore  README.md  Untitled.ipynb  environment.sh
catkin_ws/src/gan/: CMakeLists.txt  package.xml
catkin_ws/src/gan/src/: Make data list.ipynb  Untitled.ipynb  datasets_S2D.py  models.py  pix2pix_S2D.py  predict_S2D.py
catkin_ws/src/gazebo/gazebo_run/: CMakeLists.txt  package.xml
catkin_ws/src/gazebo/gazebo_run/launch/: coordinat_tf.launch  demo.launch  duckiebot.launch  duckietown_world.launch  intrinsic_calibration.launch  mvpcrane.launch  obstacle.launch  patrolling.launch  test.launch  waiting.launch
catkin_ws/src/gazebo/gazebo_run/urdf/: mybot.xacro  mybot_cam_up.gazebo  mybot_cam_up.xacro
catkin_ws/src/gazebo/gazebo_world/: CMakeLists.txt  package.xml
catkin_ws/src/gazebo/robot/bot/: CMakeLists.txt  (+1 more)
catkin_ws/src/gazebo/robot_sensors/: CMakeLists.txt  package.xml
catkin_ws/src/rgbd_camera/: CMakeLists.txt  package.xml
catkin_ws/src/rgbd_camera/launch/: gan.launch
catkin_ws/src/rgbd_camera/src/: RGBD2PointCloud.py  artifact_detect.py  depth2lidar.cpp  depth_to_point.cpp  depth_to_point.h  gan.py  gan_mask.py  image_process.cpp  image_process.py  lidar2depth.cpp  models.py  pcl2depth.cpp  set_gazebo_pose.py  sparse2dense.py  ssd.py
catkin_ws/src/rgbd_camera/src/layers/: box_utils.py  config.py
catkin_ws/src/rgbd_camera/src/layers/functions/: detection.py
catkin_ws/src/rgbd_camera/src/layers/modules/: multibox_loss.py
catkin_ws/src/s2d_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/s2d_msgs/msg/: S2D_Image.msg  S2D_ImageList.msg
(+34 files in other folders)
